is-libzip-sys/src/bindings.rs

extern "C" {
    pub fn zip_source_seek(
        arg1: *mut zip_source_t,
        arg2: zip_int64_t,
        arg3: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_seek_compute_offset(
        arg1: zip_uint64_t,
        arg2: zip_uint64_t,
        arg3: *mut ::std::os::raw::c_void,
        arg4: zip_uint64_t,
        arg5: *mut zip_error_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_source_seek_write(
        arg1: *mut zip_source_t,
        arg2: zip_int64_t,
        arg3: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_stat(arg1: *mut zip_source_t, arg2: *mut zip_stat_t)
        -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_tell(arg1: *mut zip_source_t) -> zip_int64_t;
}
extern "C" {
    pub fn zip_source_tell_write(arg1: *mut zip_source_t) -> zip_int64_t;
}
extern "C" {
    pub fn zip_source_win32a(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_uint64_t,
        arg4: zip_int64_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_win32a_create(
        arg1: *const ::std::os::raw::c_char,
        arg2: zip_uint64_t,
        arg3: zip_int64_t,
        arg4: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_win32handle(
        arg1: *mut zip_t,
        arg2: *mut ::std::os::raw::c_void,
        arg3: zip_uint64_t,
        arg4: zip_int64_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_win32handle_create(
        arg1: *mut ::std::os::raw::c_void,
        arg2: zip_uint64_t,
        arg3: zip_int64_t,
        arg4: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_win32w(
        arg1: *mut zip_t,
        arg2: *const wchar_t,
        arg3: zip_uint64_t,
        arg4: zip_int64_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_win32w_create(
        arg1: *const wchar_t,
        arg2: zip_uint64_t,
        arg3: zip_int64_t,
        arg4: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_write(
        arg1: *mut zip_source_t,
        arg2: *const ::std::os::raw::c_void,
        arg3: zip_uint64_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_source_zip(
        arg1: *mut zip_t,
        arg2: *mut zip_t,
        arg3: zip_uint64_t,
        arg4: zip_flags_t,
        arg5: zip_uint64_t,
        arg6: zip_int64_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_stat(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_flags_t,
        arg4: *mut zip_stat_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_stat_index(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
        arg4: *mut zip_stat_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_stat_init(arg1: *mut zip_stat_t);
}
extern "C" {
    pub fn zip_strerror(arg1: *mut zip_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_unchange(arg1: *mut zip_t, arg2: zip_uint64_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_unchange_all(arg1: *mut zip_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_unchange_archive(arg1: *mut zip_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_compression_method_supported(
        method: zip_int32_t,
        compress: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_encryption_method_supported(
        method: zip_uint16_t,
        encode: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_locale_data {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_multibyte_data {
    pub _address: u8,
}
pub type __builtin_va_list = *mut ::std::os::raw::c_char;
